--- a/vertical.html
+++ b/vertical.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<div class="cards">
+<div class="cards cards_vertical">
     <div class="card__wrapper">
         <div class="card card_initial">
             <div class="front"></div>
