--- a/horizontal.html
+++ b/horizontal.html
@@ -104,6 +104,7 @@
 
 
     var scrollTimeout = 50;
+    var transitionTimeout = 250;
     var w = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
     var wRatio = 0.175;
 
@@ -125,7 +126,6 @@
 
         if (scroll) {
             clearTimeout(scroll);
-            moving = false;
         }
 
         scroll = setTimeout(function() {
@@ -137,10 +137,17 @@
 
             setTimeout(function() {
                 moving = false;
-            }, scrollTimeout);
+            }, 1.1 * transitionTimeout);
 
             if (card) {
-                document.querySelector('.cards').scrollLeft = card.offsetLeft - w * wRatio;
+                d3.select('.cards').transition().duration(transitionTimeout).tween('tween', scrollTween(card.offsetLeft - w * wRatio));
+            }
+
+            function scrollTween(scrollLeft) {
+                return function() {
+                    var i = d3.interpolateNumber(this.scrollLeft, scrollLeft);
+                    return function(t) { this.scrollLeft = i(t); };
+                };
             }
         }, scrollTimeout);
 
